# CppRayTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  justfile  saved_scene.toml  scene.toml  tmp_kp_shader.comp  tmp_kp_shader.comp.spv
RayTracer/: CMakeLists.txt
RayTracer/src/: Camera.cpp  Camera.h  HitPayload.h  Light.h  Material.h  RTRandom.h  RayTracer.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
RayTracer/src/Geometry/: AABB.cpp  AABB.h  Geometry.h  Plane.cpp  Plane.h  SDFGeometry.cpp  SDFGeometry.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h
RayTracer/src/Geometry/SDF/: SDFAABB.h  SDFConstructive.h  SDFGeometry.cpp  SDFGeometry.h  SDFHollowSphere.h  SDFPlane.h  SDFSphere.h
RayTracing/: CMakeLists.txt
Walnut/: CMakeLists.txt
WalnutApp/: CMakeLists.txt
